# TrustworthyFederatedLearning

./: .gitignore  README.md
ID2Graph/: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
ID2Graph/data/: fi.py  prep.py
ID2Graph/data/avila/: avila_fti.npy
ID2Graph/data/drive/: drive_fti.npy
ID2Graph/data/fraud/: fraud_fti.npy
ID2Graph/data/nursery/: nursery_fti.npy
ID2Graph/data/phishing/: phishing_fti.npy
ID2Graph/data/ucicreditcard/: ucicreditcard_fti.npy
ID2Graph/mpiscript/: CMakeLists.txt  pipeline_1_train_mpisecureboost.cpp  run.sh  run_training.sh
ID2Graph/script/: CMakeLists.txt  build.sh  cleaner.sh  download.sh  pipeline_1_train_randomforest.cpp  pipeline_1_train_secureboost.cpp  pipeline_1_train_xgboost.cpp  pipeline_2_clustering.py  pipeline_2_uniontree.py  pipeline_3_vis_network.py  pipeline_3_vis_union.py  pipeline_4_report.py  run.sh  run_extract_result.sh  run_training.sh  test.sh
ID2Graph/src/llatvfl/: CMakeLists.txt
ID2Graph/src/llatvfl/attack/: attack.h  baseline.h
ID2Graph/src/llatvfl/clustering/: __init__.py  fmeasure.py
ID2Graph/src/llatvfl/core/: model.h  node.h  nodeapi.h  party.h  tree.h
ID2Graph/src/llatvfl/louvain/: community.h  graph.h  louvain.h
ID2Graph/src/llatvfl/lpmst/: lpmst.h  rrp.h
ID2Graph/src/llatvfl/paillier/: keygenerator.h  paillier.h  serialization.h
ID2Graph/src/llatvfl/randomforest/: node.h  party.h  randomforest.h  tree.h
ID2Graph/src/llatvfl/secureboost/: mpinode.h  mpiparty.h  mpisecureboost.h  mpitree.h  node.h  party.h  secureboost.h  tree.h
ID2Graph/src/llatvfl/utils/: dok.h  extended_euclidean.h  metric.h  mod_inverse.h  mpitag.h  prime.h  utils.h
ID2Graph/src/llatvfl/xgboost/: loss.h  node.h  party.h  tree.h  utils.h  xgboost.h
ID2Graph/test/: CMakeLists.txt
ID2Graph/test/mpi/: CMakeLists.txt  test_mpisecureboost.cpp
ID2Graph/test/standalone/: CMakeLists.txt  main.cpp  test_clustering.py  test_dok.cpp  test_loss.cpp  test_louvain.cpp  test_metric.cpp  test_paillier.cpp  test_randomforest.cpp  test_secureboost.cpp  test_utils.cpp  test_xgboost.cpp
LabelDefender/: README.md
PLI/: .gitignore  README.md  install.sh  requirements.txt  setup.py
batch_level_label_inference/: .gitignore  README.md  __init__.py  draw.py  log_parser.py  utils.py  vfl_dlg.py  vfl_dlg_ae.py  vfl_dlg_no_defense.py  vfl_main_task.py  vfl_main_task_laplace.py  (+2 more)
(+112 files in other folders)
