cmake_minimum_required(VERSION 3.13)

add_executable(train_randomforest pipeline_1_train_randomforest.cpp)
add_executable(train_secureboost pipeline_1_train_secureboost.cpp)
add_executable(train_xgboost pipeline_1_train_xgboost.cpp)

target_link_libraries(train_randomforest boost_random pthread llatvfl)
target_link_libraries(train_secureboost boost_random pthread llatvfl)
target_link_libraries(train_xgboost boost_random pthread llatvfl)